Cambio de primeraversion en la rama LM252002
Added viewport meta tag and updated title and content.

--- a/GuiaLabsMultiplataforma/Guia1/primeraversion.html
+++ b/GuiaLabsMultiplataforma/Guia1/primeraversion.html
@@ -2,12 +2,15 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Primer Versión</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Primer Versión - Guía 1</title>
 </head>
 <body>
+    <h1>Historia y Propósito de Git</h1>
     <p>
-        Git fue creado pensando en la eficiencia y la confiabilidad del mantenimiento de versiones de aplicaciones cuando éstas tienen un gran número de archivos de código fuente,
-         es decir Git nos proporciona las herramientas para desarrollar un trabajo en equipo de manera inteligente y rápida y por trabajo nos referimos a algún software o página que implique código el cual necesitemos hacerlo con un grupo de personas.
+        Git fue creado pensando en la eficiencia y la confiabilidad del mantenimiento de versiones de aplicaciones cuando éstas tienen un gran número de archivos de código fuente, 
+        es decir Git nos proporciona las herramientas para desarrollar un trabajo en equipo de manera inteligente y rápida y por trabajo nos referimos a algún software o página que implique código el cual necesitemos hacerlo con un grupo de personas.
+        <strong>Este archivo ha sido actualizado para la práctica de colaboración.</strong>
     </p>
 </body>
 </html>
