Actualizando primera version.html para la rama AT251699

--- a/GuiaLabsMultiplataforma/Guia1/primeraversion.html
+++ b/GuiaLabsMultiplataforma/Guia1/primeraversion.html
@@ -2,12 +2,18 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Primer Versión</title>
+    <title>Versión Colaborador - AT251699</title>
+    <style>
+        body { background-color: #f0f8ff; }
+        h1 { color: navy; }
+    </style>
 </head>
 <body>
+    <h1>¿Qué es Git? - Por: Colaborador</h1>
     <p>
         Git fue creado pensando en la eficiencia y la confiabilidad del mantenimiento de versiones de aplicaciones cuando éstas tienen un gran número de archivos de código fuente,
-         es decir Git nos proporciona las herramientas para desarrollar un trabajo en equipo de manera inteligente y rápida y por trabajo nos referimos a algún software o página que implique código el cual necesitemos hacerlo con un grupo de personas.
+        es decir Git nos proporciona las herramientas para desarrollar un trabajo en equipo de manera inteligente y rápida y por trabajo nos referimos a algún software o página que implique código el cual necesitemos hacerlo con un grupo de personas.
     </p>
+    <p><em>Esta modificación fue realizada por el segundo integrante del equipo.</em></p>
 </body>
 </html>
